<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/border_background"
        android:contentDescription="@string/backButton"
        android:src="@drawable/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck">

    </ImageButton>

    <TextView
        android:id="@+id/easyWayHeadline"
        android:layout_width="133dp"
        android:layout_height="47dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/dosis_extrabold"
        android:text="@string/easyWay"
        android:textColor="#3C3C3C"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginText"
        android:layout_width="120dp"
        android:layout_height="62dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/dosis_extrabold"
        android:text="@string/loginText"
        android:textColor="#3C3C3C"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButton" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="56dp"
        android:maxLines="1"
        android:autofillHints="Email"
        android:background="@drawable/edittext_design_background"
        android:fontFamily="@font/dubai_regular"
        android:hint="@string/email"
        android:paddingStart="20dp"
        android:textColorHint="#6F6F6F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginText"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="56dp"
        android:autofillHints="Password"
        android:background="@drawable/edittext_design_background"
        android:fontFamily="@font/dubai_regular"
        android:hint="@string/password"
        android:maxLines="1"
        android:paddingStart="20dp"
        android:inputType="textPassword"
        android:textColorHint="#6F6F6F"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789-_.!@#$%^*(),"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
        tools:ignore="RtlSymmetry" />

    <ImageView
        android:id="@+id/passwordVisibilityToggle"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:clickable="true"
        android:contentDescription="@string/showpassword"
        android:focusable="true"
        android:padding="8dp"
        android:src="@drawable/baseline_remove_red_eye_24"
        app:layout_constraintBottom_toBottomOf="@+id/passwordEditText"
        app:layout_constraintEnd_toEndOf="@+id/passwordEditText"
        app:layout_constraintTop_toTopOf="@+id/passwordEditText" />

    <LinearLayout
        android:id="@+id/loginButton"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText">

        <TextView
            android:id="@+id/loginTextBut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginButton"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="@font/dubai_regular" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/rememberMeCheckBox"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="50dp"
        android:background="@null"
        android:fontFamily="@font/dubai_regular"
        android:text="Remember me"
        android:textAllCaps="false"
        android:textColor="#FF5A5F"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/forgotPassword"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:background="@null"
        android:fontFamily="@font/dubai_regular"
        android:paddingStart="5dp"
        android:text="Forgot password?"
        android:textAllCaps="false"
        android:textColor="#FF5A5F"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/goToSignUpLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPassword">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dubai_regular"
            android:text="@string/don_t_have_an_account"
            android:textColor="#8D8D8D"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/goToSignUpPage"
            android:layout_width="55dp"
            android:layout_height="30dp"
            android:paddingStart="5dp"
            android:fontFamily="@font/dubai_regular"
            android:text="@string/sign_up"
            android:textColor="#FF5A5F"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:background="@null"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goToSignUpLayout">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="1dp"
            android:layout_weight="1"
            android:background="#555555" />

        <TextView
            android:id="@+id/textOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/or"
            android:textColor="#828282"
            android:textSize="12sp"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:background="#555555" />

    </LinearLayout>

    <TextView
        android:id="@+id/optionsLoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/dubai_regular"
        android:text="@string/log_with_one_of_the_following_options"
        android:textColor="#8D8D8D"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/appIcons"
        android:layout_width="340dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/optionsLoginText">

        <ImageView
            android:id="@+id/googleLogin"
            android:layout_width="90dp"
            android:layout_height="52dp"
            android:scaleType="center"
            android:layout_marginStart="16dp"
            android:background="@drawable/edittext_design_background"
            android:src="@drawable/google" />

        <ImageView
            android:id="@+id/githubLogin"
            android:layout_width="90dp"
            android:layout_height="52dp"
            android:layout_marginStart="16dp"
            android:scaleType="center"
            android:background="@drawable/edittext_design_background"
            android:src="@drawable/github" />

        <ImageView
            android:id="@+id/twitterLogInButton"
            android:layout_width="90dp"
            android:layout_height="52dp"
            android:layout_marginStart="16dp"
            android:scaleType="center"
            android:background="@drawable/edittext_design_background"
            android:src="@drawable/twitter" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>