<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.login.ForgotPassword">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/border_background"
        android:contentDescription="@string/backButton"
        android:src="@drawable/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck">

    </ImageButton>

    <TextView
        android:id="@+id/easyWayHeadline"
        android:layout_width="133dp"
        android:layout_height="47dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/dosis_extrabold"
        android:text="@string/easyWay"
        android:textColor="#3C3C3C"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forgotText"
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/dosis_extrabold"
        android:text="@string/forgot_password"
        android:textColor="#3C3C3C"
        android:textSize="32sp"
        app:layout_constraintEnd_toStartOf="@+id/easyWayHeadline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButton" />

    <EditText
        android:id="@+id/forgotEmailText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="56dp"
        android:maxLines="1"
        android:autofillHints="Email"
        android:background="@drawable/edittext_design_background"
        android:fontFamily="@font/dubai_regular"
        android:hint="@string/email"
        android:paddingStart="20dp"
        android:textColorHint="#6F6F6F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotText"
        tools:ignore="RtlSymmetry" />



    <LinearLayout
        android:id="@+id/buttonForgotPassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotEmailText">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/button_background" />

        <TextView
            android:id="@+id/loginTextBut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dubai_regular"
            android:text="Şifremi Sıfırla"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
