<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Movie Filter asfasfasfasfasfasfasfasfasfa"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"/>

    <Spinner
        android:id="@+id/category_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:entries="@array/film_categories"
        android:prompt="@string/select_category"
        android:layout_marginBottom="8dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="16dp"/>

    <Spinner
        android:id="@+id/movie_category_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:entries="@array/movies_categories"
        android:prompt="@string/select_movie_category"
        android:layout_marginBottom="8dp"/>

    <SeekBar
        android:id="@+id/imdb_rating_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="8"
        android:progress="0"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/imdb_range_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="IMDb Range: 1 - 10"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"/>


    <EditText
        android:id="@+id/actor_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/oyuncu_ad"
        android:layout_marginBottom="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/start_date_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="Start Date"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:focusable="false"
            android:clickable="true"/>

        <EditText
            android:id="@+id/end_date_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="End Date"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:focusable="false"
            android:clickable="true"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <Button
            android:id="@+id/filter_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Filter"
            android:layout_gravity="center"/>

        <Space
            android:layout_width="16dp"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/reset_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Reset"
            android:layout_gravity="center"/>

    </LinearLayout>

</LinearLayout>
